requirements: Python 3.8, upgrade, remove recommonmark, pypi, css
https://github.com/openownership/data-standard/issues/318
https://github.com/openownership/data-standard/issues/226

Start using pypi releases of our libraries.

Have to upgrade Sphinx as myst-parser needs a newer version

Python upgraded needed.
Python 3.8 is the latest version RTD seems to support at this time

theme_overrides.css:

Add CSS classes to get back old behavoir changed by upgrade.

Remove wy-table-responsive css classes.
I couldn't find any place they were being used.
Also the CSS file wasn't loaded before so they were not making a
difference.

--- a/docs/_static/theme_overrides.css
+++ b/docs/_static/theme_overrides.css
@@ -1,31 +1,10 @@
-/* override table width restrictions */
-.wy-table-responsive table td, .wy-table-responsive table th {
-    white-space: normal !important;
+
+/** A newer version of docutils aligns center by default. We want the old behavior of left align. **/
+body .align-default {
+    text-align: left !important;
 }
 
-.wy-table-responsive {
-    margin-bottom: 24px;
-    max-width: 100%;
-    overflow: visible !important;
-}
-
-
-.wy-table-responsive th:nth-of-type(1) {
-    width:10%;
-}
-
-.wy-table-responsive th:nth-of-type(2) {
-    width:10%;
-}
-
-.wy-table-responsive th:nth-of-type(3) {
-    width:60%;
-}
-
-.wy-table-responsive th:nth-of-type(4) {
-    width:10%;
-}
-
-.wy-table-responsive th:nth-of-type(5) {
-    width:10%;
+body table.align-default {
+    margin-left: 0 !important;
+    margin-right: auto !important;
 }
